docs-archive/apache-airflow-providers-amazon/9.4.0/_sources/_api/tests/system/amazon/aws/example_mwaa/index.rst.txt
tests.system.amazon.aws.example_mwaa
====================================

.. py:module:: tests.system.amazon.aws.example_mwaa


Attributes
----------

.. autoapisummary::

   tests.system.amazon.aws.example_mwaa.DAG_ID
   tests.system.amazon.aws.example_mwaa.EXISTING_ENVIRONMENT_NAME_KEY
   tests.system.amazon.aws.example_mwaa.EXISTING_DAG_ID_KEY
   tests.system.amazon.aws.example_mwaa.sys_test_context_task
   tests.system.amazon.aws.example_mwaa.test_context
   tests.system.amazon.aws.example_mwaa.test_run


Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'example_mwaa'


.. py:data:: EXISTING_ENVIRONMENT_NAME_KEY
   :value: 'ENVIRONMENT_NAME'


.. py:data:: EXISTING_DAG_ID_KEY
   :value: 'DAG_ID'


.. py:data:: sys_test_context_task

.. py:data:: test_context

.. py:data:: test_run

