docs-archive/apache-airflow-providers-amazon/9.6.1/_sources/_api/tests/system/amazon/aws/example_mwaa/index.rst.txt
tests.system.amazon.aws.example_mwaa
====================================

.. py:module:: tests.system.amazon.aws.example_mwaa


Attributes
----------

.. autoapisummary::

   tests.system.amazon.aws.example_mwaa.DAG_ID
   tests.system.amazon.aws.example_mwaa.EXISTING_ENVIRONMENT_NAME_KEY
   tests.system.amazon.aws.example_mwaa.EXISTING_DAG_ID_KEY
   tests.system.amazon.aws.example_mwaa.ROLE_WITHOUT_INVOKE_REST_API_ARN_KEY
   tests.system.amazon.aws.example_mwaa.sys_test_context_task
   tests.system.amazon.aws.example_mwaa.test_context
   tests.system.amazon.aws.example_mwaa.test_run


Functions
---------

.. autoapisummary::

   tests.system.amazon.aws.example_mwaa.unpause_dag
   tests.system.amazon.aws.example_mwaa.test_iam_fallback


Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'example_mwaa'


.. py:data:: EXISTING_ENVIRONMENT_NAME_KEY
   :value: 'ENVIRONMENT_NAME'


.. py:data:: EXISTING_DAG_ID_KEY
   :value: 'DAG_ID'


.. py:data:: ROLE_WITHOUT_INVOKE_REST_API_ARN_KEY
   :value: 'ROLE_WITHOUT_INVOKE_REST_API_ARN'


.. py:data:: sys_test_context_task

.. py:function:: unpause_dag(env_name, dag_id)

.. py:function:: test_iam_fallback(role_to_assume_arn, mwaa_env_name)

.. py:data:: test_context
   :value: None


.. py:data:: test_run

